minor modification to header

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body class="container">
 	   <header>
-		<h1 style="display:inline;">Raspberry Pi:</h1><small>Web Interface</small>
+		<h1 style="display:inline;" class="lead">Raspberry Pi:</h1><small>Web Interface</small>
 	   </header>
 	   <main>
 		<section class="row">
