--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+	   <link rel="stylesheet" href="css/app.css"/>
 
 	</head>
 	<body class="container">
